kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-postgres
  namespace: ardian
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - name: configmap-as-volume
      mountPath: /home
  - name: postgres
    image: postgres
    ports:
    - containerPort: 5432
  volumes:
  - name: configmap-as-volume
    configMap:
      name: game-demo
      items:
      - key: game.properties
        path: myconfigmapmount
