kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ardian
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
