kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ardian
spec:
  ingressClassName: nginx
  rules:
  - host: test.app
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
